--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
         <link rel="stylesheet" href="/styles/experiences.css">
         <link rel="stylesheet" href="/styles/projects.css">
         <link rel="icon" type="image/jpeg" href="/styles/images/me.jpg">
-        <link rel="preload" href="/styles/images/me2.jpg" as="image">
+        <link rel="preload" href="/styles/images/me.jpg" as="image">
+        <link rel="preload" href="/styles/icons/logo.png" as="image">
+        <link rel="preload" href="/styles/icons/logoblack.png" as="image">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayBold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayLight.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayMedium.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayRoman.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayThin.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayXThin.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     </head>
     <body>
         <nav class="navbar">
@@ -408,5 +416,13 @@
                 <a href="mailto:winaldafarell@gmail.com"><img src="/styles/icons/email.svg" alt="email-icons" class="footer-icons-logo"/></a>
             </div>
         </footer>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-LFBMQK2E1V"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-LFBMQK2E1V');
+        </script>
     </body>
 </html>
