feat: italic optimize

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
         <link rel="preload" href="/styles/icons/logo.png" as="image">
         <link rel="preload" href="/styles/icons/logoblack.png" as="image">
         <link rel="preload" href="/styles/fonts/NeueHaasDisplayBold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayBoldItalic.ttf" as="font" type="font/ttf" crossorigin="anonymous">
         <link rel="preload" href="/styles/fonts/NeueHaasDisplayLight.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayLightItalic.ttf" as="font" type="font/ttf" crossorigin="anonymous">
         <link rel="preload" href="/styles/fonts/NeueHaasDisplayMedium.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayMediumItalic.ttf" as="font" type="font/ttf" crossorigin="anonymous">
         <link rel="preload" href="/styles/fonts/NeueHaasDisplayRoman.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayRomanItalic.ttf" as="font" type="font/ttf" crossorigin="anonymous">
         <link rel="preload" href="/styles/fonts/NeueHaasDisplayThin.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayThinItalic.ttf" as="font" type="font/ttf" crossorigin="anonymous">
         <link rel="preload" href="/styles/fonts/NeueHaasDisplayXThin.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="preload" href="/styles/fonts/NeueHaasDisplayXThinItalic.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     </head>
     <body>
         <nav class="navbar">
